# qchecker

./: .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  desc.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_optional.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: requirements_docs.txt
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
docs/source/_autosummary/: qchecker.descriptions.rst  qchecker.general.rst  qchecker.match.rst
docs/source/autosummary/: qchecker.substructures.rst
src/qchecker/: __init__.py  _substructures.py  match.py  matchers.py  parser.py  utils.py
src/qchecker/descriptions/: __init__.py  _descriptions.py  descriptions.py  descriptions.toml
src/qchecker/general/: __init__.py  _flake8_checks.py  _process.py  _pylint_checks.py  flake8_checks.py  pylint.py  pylint_checks.py
src/qchecker/substructures/: __init__.py  _ast_substructures.py  _base.py  _cst_substructures.py  _pure_ast_substructures.py  _utils.py  patterns.py
tests/: test_substructures.py
