[metadata]
name = qchecker
version = 0.0.0a3
author = James Finnie-Ansley
url = https://github.com/James-Ansley/qchecker
description = A simple library for finding statement-level substructures in Abstract Syntax Trees
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    Topic :: Utilities
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
python_requires = >= 3.10
package_dir=
    = src
packages = find:
install_requires =
    tomli~=2.0.1
    pylint~=2.12.2
    flake8~=4.0.1
    flake8-json~=21.7.0
    libcst~=0.4.1

[options.package_data]
* = *.toml

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
