[metadata]
name = qchecker
version = 1.1.1
author = James Finnie-Ansley
url = https://github.com/James-Ansley/qchecker
description = A simple library for finding statement-level substructures in Abstract Syntax Trees
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
python_requires = >= 3.10
package_dir=
    = src
packages = find:
install_requires =
    tomli~=2.0.1
    libcst~=0.4.1
    Deprecated~=1.2.13


[options.package_data]
* = *.toml

[options.packages.find]
where = src

[options.extras_require]
general_checks =
    pylint~=2.13.5
    flake8~=4.0.1
    flake8-json~=21.7.0
